--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,29 @@
 /* CSS Stylesheet */
 
 /* Universal Styles */
+
+body {
+  background-color: ;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  width: 100%;
+  max-width: 960px;
+  margin: 0;
+  border: black 3px solid;
+
+}
+
+/* Header/Nav */
+
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  height: 64px;
+  /* width: 100%; */
+  max-width: 960px;
+  background-color: lightblue;
+}
