--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,28 +2,67 @@
 
 /* Universal Styles */
 
-body {
+ body {
   background-color: ;
-  margin: 0;
-  padding: 0;
-}
-
-.container {
-  width: 100%;
-  max-width: 960px;
-  margin: 0;
-  border: black 3px solid;
 
 }
+
+
 
 /* Header/Nav */
 
 header {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  position: fixed;
+  border-bottom: lightgrey 1px solid;
+  z-index: 100;
   height: 64px;
-  /* width: 100%; */
-  max-width: 960px;
-  background-color: lightblue;
+  width: 100%;
+  background-color: #f08080;
+  font-family: Verdana, sans-serif;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+
+}
+
+.logo img {
+  padding: 32px 0px 32px 24px;
+
+}
+
+.logo .colmar {
+  color: black;
+  font-weight: bold;
+  font-family: Helvetica;
+  margin-left: 0;
+  padding: 0;
+  font-size: 18px;
+}
+
+.logo .academy {
+  color: lightgrey;
+  font-weight: 400;
+  font-family: Helvetica;
+  font-size: 18px;
+}
+
+header nav {
+  display: flex;
+  align-items: center;
+  margin: auto 24px auto auto;
+
+
+}
+
+nav span a {
+  display: inline-block;
+  color: WhiteSmoke;
+  padding-right: 16px;
+  text-decoration: none;
+  font-size: 18px;
+
 }
