--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -67,16 +67,18 @@ nav span a {
   font-size: 18px;
 }
 
+/* Main Section */
+
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: lightgrey;
-  border: black 6px dotted;
   margin: 0;
   max-width: 1024px;
   padding-top: 6rem;
   box-sizing: border-box;
+  border: black 3px solid;
 }
 
 .banner {
@@ -116,7 +118,7 @@ nav span a {
 
 .learn h3 {
   color: #808080;
-  font-weight: 300;
+  font-weight: 400;
   font-family: Helvetica; sans-serif;
   font-size: 1.50rem;
   line-height: 1.5;
@@ -125,10 +127,12 @@ nav span a {
   padding-right:
 }
 .learn a {
-  background-color: #8b0000;
-  font-weight: 800;
+  background-color: #f08080;1
+  /* background-color: #8b0000; */
+  font-weight: 1000;
   text-align: center;
-  color: #c0c0c0;
+  /* color: #c0c0c0; */
+  color: WhiteSmoke;
   font-size: 1.75rem;
   padding: 8px 20px 8px 20px;
   text-decoration: none;
@@ -136,4 +140,44 @@ nav span a {
   font-family: Helvetica, sans-serif;
   border-radius: 10px 100px / 120px;
 
+}
+
+a:hover {
+  color: #708090;
+}
+
+/* Campus Info Section */
+
+.info {
+  /* border: darkblue 5px solid; */
+  /* display: flex;
+  flex-direction: column; */
+  margin: 32px 24px 32px 24px;
+  width: 60%;
+  overflow: hidden;
+}
+
+.info img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  /* padding: 32px 24px 32px 24px; */
+}
+
+.campus-info {
+  width: 40%;
+  margin: auto;
+  text-align: center;
+}
+
+.content h2 {
+  /* color: #8b0000; */
+  color: #708090;
+  font-weight: bold;
+  font-family: Helvetica; sans-serif;
+  font-size: 2rem;
+  line-height: 1;
+  text-align: center;
+  padding-top: 32px;
+  padding-bottom: 24px;
 }
