--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,9 +19,11 @@ header {
   z-index: 100;
   height: 64px;
   width: 100%;
-  max-width: 1024px;
+  max-width: 1280px;
   background-color: #f08080;
   font-family: Verdana, sans-serif;
+  margin: 0;
+
 }
 
 .logo {
@@ -55,8 +57,6 @@ header nav {
   display: flex;
   align-items: center;
   margin: auto 24px auto auto;
-
-
 }
 
 nav span a {
@@ -67,7 +67,7 @@ nav span a {
   font-size: 18px;
 }
 
-/* Main Section */
+/* Banner Section */
 
 .container {
   display: flex;
@@ -75,7 +75,7 @@ nav span a {
   align-items: center;
   background-color: lightgrey;
   margin: 0;
-  max-width: 1024px;
+  max-width: 1280px;
   padding-top: 6rem;
   box-sizing: border-box;
   border: black 3px solid;
@@ -293,16 +293,20 @@ a:hover {
   display: flex;
   align-items: center;
   padding: 16px;
-  /* border: black 2px solid;
-
-  justify-content: space-between; */
 }
 
 /* Learning Section */
 
-.learn-contain {
-
-
+.learn-container {
+  display: flex;
+  /*align-items: center; */
+  margin: 0;
+  max-width: 1280px;
+  box-sizing: border-box;
+  border: black 3px solid;
+  /* justify-content: center;
+  padding-top: 6rem; */
+  flex-direction: column;
 }
 
  .learning {
@@ -317,32 +321,32 @@ a:hover {
   font-weight: bold;
   font-family: Helvetica; sans-serif;
   font-size: 2rem;
-  line-height: 1;
+  line-height: .50;
   text-align: center;
   margin-top: 32px;
 }
 
 .courses {
-  border: black 2px dotted;
+  /* border: black 2px dotted; */
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   box-sizing: border-box;
   margin: 32px 72px 32px 72px;
 
+
 }
 .courses .course-images {
     display: block;
-    /* flex-wrap: wrap; */
     align-items: center;
     margin: 1rem;
-    width: 354px;
+    width: 305px;
+    height: auto;
     padding-right: 32px;
     padding-bottom: 32px;
     overflow: hidden;
     background-color: #778899;
-    border: black 2px solid;
-
+    /* border: black 2px solid; */
 }
 
 .courses .course-images .classes {
@@ -354,11 +358,17 @@ a:hover {
 
 .courses .course-images h3 {
   padding-top: 16px;
-  line-height: 2;
+  line-height: 1;
   font-family: Helvetica, sans-serif;
   font-weight: bold;
   font-size: 1.75rem;
-
+}
+.courses .course-images a {
+  color: white;
+  text-decoration: none;
+}
+.courses .course-images a:hover {
+  color: #b0c4de;
 }
 
 .courses .course-images p {
@@ -367,4 +377,65 @@ a:hover {
   line-height: 1.5;
   font-size: 1.05rem;
   font-weight: 100;
+}
+
+/* Thesis Section */
+
+.thesis-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin: 0;
+  max-width: 1280px;
+  box-sizing: border-box;
+  border: black 3px solid;
+}
+.thesis-exhibit {
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ width: 100%;
+}
+
+.thesis-exhibit h2 {
+ color: #708090;
+ font-weight: bold;
+ font-family: Helvetica; sans-serif;
+ font-size: 2rem;
+ line-height: .50;
+ text-align: center;
+ margin-top: 32px;
+ margin-bottom: 32px;
+}
+
+/* Footer Section */
+
+footer .copyright {
+  border: darkblue 2px dotted;
+  display: flex;
+  align-items: center;
+  margin: 16px 24px 16px 24px;
+  max-width: 1280px;
+  width: 100%;
+  font-family: Helvetica,sans-serif;
+  box-sizing: border-box;
+}
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: auto;
+
+
+}
+.footer li {
+  padding: 5px;
+  display: inline-block;
+
+}
+.footer a {
+  color: black;
+  text-decoration: none;
+
+
 }
